# MachinaMind_AI_Agent

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  demo.bat  pyproject.toml  start.bat
.github/workflows/: ci.yml
backend/: .env.example  __init__.py  backend_api.spec  config.py  data_simulator.py  index_pdf.py  prompt_templates.py  requirements.txt
backend/agents/: analysis_agent.py  data_agent.py  llm_agent.py
backend/api/: main.py
backend/database/: db_handler.py
backend/rag_engine/: rag_manager.py
cpp_gui/: CMakeLists.txt  main.cpp  resources.qrc
cpp_gui/model/: ApiClient.cpp  ApiClient.h  CMakeLists.txt  DTOs.h  DataModel.cpp  DataModel.h
cpp_gui/presenter/: CMakeLists.txt  MainPresenter.cpp  MainPresenter.h
cpp_gui/styles/: dark_theme.qss  light_theme.qss
cpp_gui/ui/: MainWindow.ui
cpp_gui/view/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
deploy/: Dockerfile  docker-compose.yml
docs/: HUGGINGFACE_SETUP.md  OPENAI_SETUP.md  PROJECT_SUMMARY.md  QUICKSTART.md  RAG_GUIDE.md  README.md  UI_STARTUP_GUIDE.md  architecture.md
docs/images/: .gitkeep
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_data_agent.py
